# GlassBox-ML

./: .gitignore  CONTRIBUTING.md  GlassBoxML.docx  LICENSE.txt  README.md  Readme.md  Untitled  pyproject.toml
core/: base_model.py  metrics.py  optimizer.py  preprocessing.py
data/: medical_inventory.csv
datasets/: generators.py
diagnostics/: learning_curve.py
examples/: benchmark_test_c.py  benchmark_test_r.py  demo_adaboost.py  demo_conf_matrix.py  demo_csv_file.py  demo_dbscan.py  demo_dbscan2.py  demo_decision_tree.py  demo_diag_inspector.py  demo_ensemble_fairness.py  demo_eval.py  demo_gbm.py  demo_gbm_classifer.py  demo_jl_lemma_accuracy.py  demo_kernel_trick.py  demo_kmeans.py  demo_kmeans2.py  demo_kmeans3.py  demo_kmeans_elbow.py  demo_knn.py  demo_lda.py  demo_lda_vs_pca.py  demo_learning_curve.py  demo_linearreg.py  demo_logistic.py  demo_metrics.py  demo_multiple_linearreg.py  demo_naive_bayes.py  demo_pca.py  demo_perceptron.py  demo_pipeline.py  demo_polynomial.py  demo_random_regressor.py  demo_random_search.py  demo_regression_tree.py  demo_ridge.py  demo_ridge2.py  demo_srp_vs_pca.py  demo_svm.py  demo_svm_margins.py  (+34 more)
glassboxml/: __init__.py
glassboxml/core/: __init__.py  _base_model.py  _model_selection.py  _optimizer.py  _pipeline.py  model_selection.py
glassboxml/datasets/: __init__.py  _generators.py  generators.py
glassboxml/diagnostics/: __init__.py  _fairness.py  _inspector.py  _learning_curve.py
glassboxml/feature_extraction/: __init__.py  _text.py  text.py  text_numpy_version.py
glassboxml/metrics/: __init__.py  _classification.py  _confusion_matrix.py  _metrics.py  _regression.py
glassboxml/models/: __init__.py  _adaboost.py  (+33 more)
models/: adaboost.py  dbscan.py  decision_tree.py  gradientboost.py  kmeans.py  kmeans2.py  knn.py  lasso_regression.py  lda.py  linear_regression.py  logistic_regression.py  pca.py  random_forest.py  ridge_regression.py  svm.py
tests/: template.py  test_adaboost.py  test_dbscan.py  test_decision_tree.py  test_gradient_boost.py  test_kmeans.py  test_knn.py  test_lda.py  test_linear_reg.py  test_logistic_reg.py  test_naive_bayes.py  test_pca.py  test_perceptron.py  test_pipeline.py  test_random_forest.py  test_ridge_lasso.py  test_sparse_random_projection.py  test_svm.py  test_tfidf_vectorizer.py
(+6 files in other folders)
