[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glassboxml"
version = "0.2.0"
description = "A transparent machine learning framework focused on explainability and diagnostics."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "V SS Karthik"}
]

dependencies = [
  "numpy>=1.26,<3.0",
  "matplotlib>=3.8,<4.0",
  "scipy>=1.11,<2.0"
]

keywords = ["machine learning", "ml", "xai", "glassbox"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/hogwarts-coder10/GlassBox-ML"

[tool.setuptools.packages.find]
include = ["glassboxml*"]
exclude = ["tests*", "examples*", "data*", "Lib*", "Scripts*", "Include*", "*.egg-info*"]
